index.html footline.

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,6 @@ Powered by public domain <a href="http://repo.cat-v.org/atrack/">Atrack tracker 
 For feedback email uriel@berlinblue.org or join #bittorrent in irc.freenode.org
 
 <hr>
-<small><a href="http://cat-v.org">This site is a cat-v.org production</a>.</small>
+<small><a href="http://cat-v.org">This site is a cat-v.org production</a>. - <i>Sharing is caring.</i></small> 
 </body>
 </html>
