Updates to static main page.

--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,14 @@
 <html>
-<head><title>Bittrk - Experimental installation of the Atrack tracker for Google App engine</title></head>
+<head>
+    <title>Bittrk - Experimental installation of the Atrack tracker for Google App engine</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
+</head>
 
 <body>
 
-<h1>Bittrk</h1>
+    <h1>Bittrk <small><i>Alpha</i></small></h1>
 
-This is an experimental tracker, the tracker address is: http://bittrk.appspot.com/ntrack
+This is an experimental tracker, the tracker address is: <b>http://bittrk.appspot.com/announce</b>
 
 <p>
 
@@ -16,6 +19,6 @@ Powered by public domain <a href="http://repo.cat-v.org/atrack/">Atrack tracker 
 For feedback email uriel@berlinblue.org or join #bittorrent in irc.freenode.org
 
 <hr>
-<small><a href="http://cat-v.org">This site is a cat-v.org production</a>. - <i>Sharing is caring.</i></small> 
+<small><a href="http://cat-v.org">This site is a cat-v.org production</a>. - <i>Because sharing is caring.</i></small> 
 </body>
 </html>
