Add google analytics to index.html

--- a/static/index.html
+++ b/static/index.html
@@ -20,5 +20,16 @@ For feedback email uriel@berlinblue.org or join #bittorrent in irc.freenode.org
 
 <hr>
 <small><a href="http://cat-v.org">This site is a cat-v.org production</a>. - <i>Because sharing is caring.</i></small> 
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-1220719-11");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+
 </body>
 </html>
