Mention ssl announcer url.

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 
     <h1>Bittrk <small><i>Alpha</i></small></h1>
 
-This is an experimental tracker, the tracker address is: <b>http://bittrk.appspot.com/announce</b>
+This is an experimental tracker, the tracker address is: <b>http://bittrk.appspot.com/announce</b> or if you want to use SSL: <b>https://bittrk.appspot.com/announce</b> 
 
 <p>
 
