Update main html page.

--- a/static/index.html
+++ b/static/index.html
@@ -6,17 +6,29 @@
 
 <body>
 
-    <h1>Bittrk <small><i>Alpha</i></small></h1>
+    <h1>Bittrk <small><i>Alpha 3</i></small></h1>
 
-This is an experimental tracker, the tracker address is: <b>http://bittrk.appspot.com/announce</b> or if you want to use SSL: <b>https://bittrk.appspot.com/announce</b> 
+This is an experimental tracker.
+<p>
+
+You can use the following addresses to add the tracker to your torrents or <a href="http://repo.cat-v.org/atrack/ntrack">ntrack apps</a>:
+
+<ul>
+    <li><b>http://bittrk.appspot.com/announce</b>
+    <li><b>https://bittrk.appspot.com/announce</b> (For secure SSL connections) 
+</ul>
 
 <p>
 
-Powered by public domain <a href="http://repo.cat-v.org/atrack/">Atrack tracker for Google App Engine</a>.
+Powered by the public domain <a href="http://repo.cat-v.org/atrack/">Atrack tracker for Google App Engine</a>.
 
 <p>
 
 For feedback email uriel@berlinblue.org or join #bittorrent in irc.freenode.org
+
+<p>
+
+<i>Note:</i> For privacy and efficiency reasons, atrack does not (yet?) implement the `scrape` protocol, so you wont see the number of seeders and leechers available in this tracker, this doesn't mean they aren't there, but atrack doesn't keep track (pun not intended ;)) of that information. 
 
 <hr>
 <small><a href="http://cat-v.org">This site is a cat-v.org production</a>. - <i>Because sharing is caring.</i></small> 
