--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Bittrk - Experimental installation of the Atrack tracker for Google App engine</title>
+    <title>Bittrk - Experimental open installation of the Atrack tracker for Google App Engine</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
 </head>
 
