--- a/static/index.html
+++ b/static/index.html
@@ -9,26 +9,28 @@
     <h1>Bittrk <small><i>Alpha 4</i></small></h1>
 
 This is an experimental tracker.
-<p>
 
-You can use the following addresses to add the tracker to your torrents or <a href="http://repo.cat-v.org/atrack/ntrack">ntrack apps</a>:
+<p>You can use the following addresses to add the tracker to your torrents or
+<a href="http://repo.cat-v.org/atrack/ntrack">ntrack apps</a>:
 
 <ul>
     <li><b>http://bittrk.appspot.com/announce</b>
     <li><b>https://bittrk.appspot.com/announce</b> (For secure SSL connections) 
 </ul>
 
-<p>
+<p>Powered by the public domain <a href="http://repo.cat-v.org/atrack/">Atrack
+    tracker for Google App Engine</a>.
 
-Powered by the public domain <a href="http://repo.cat-v.org/atrack/">Atrack tracker for Google App Engine</a>.
+<p>For any feedback you can <a href="http://uriel.cat-v.org/contact">contact
+    me</a> or join #bittorrent in irc.freenode.org
 
-<p>
+<p><i>Note:</i> For privacy and efficiency reasons, atrack does not (yet?)
+implement the `scrape` protocol and other non-essential BT features, so you
+wont see the number of seeders and leechers available in this tracker, this
+doesn't mean they aren't there, but atrack doesn't keep track (pun not intended
+;)) of that information. 
 
-For feedback email uriel@berlinblue.org or join #bittorrent in irc.freenode.org
-
-<p>
-
-<i>Note:</i> For privacy and efficiency reasons, atrack does not (yet?) implement the `scrape` protocol, so you wont see the number of seeders and leechers available in this tracker, this doesn't mean they aren't there, but atrack doesn't keep track (pun not intended ;)) of that information. 
+<p>You can also find <a href="http://track-on.appspot.com">a list of known open and public trackers at Trackon</a>.
 
 <hr>
 <small><a href="http://cat-v.org">This site is a cat-v.org production</a>. - <i>Because sharing is caring.</i></small> 
