Very minor HTML and docstrings updates.

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
 
 <body>
 
-    <h1>Bittrk <small><i>Alpha 4</i></small></h1>
+    <h1>Bittrk <small><i>Alpha 5</i></small></h1>
 
 This is an experimental tracker.
 
@@ -43,6 +43,9 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 try {
 var pageTracker = _gat._getTracker("UA-1220719-11");
 pageTracker._trackPageview();
+
+var pageTracker2 = _gat._getTracker("UA-1220719-12");
+pageTracker2._trackPageview();
 } catch(err) {}</script>
 
 </body>
