--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,8 @@
 <html><head>
 <title>Bittrk - Experimental open installation of the Atrack tracker for Google App Engine</title>
 <link rel="stylesheet" type="text/css" href="http://www.trackon.org/static/fluid960gs/all.css" media="screen">
-<!--[if IE 6]><link rel="stylesheet" type="text/css" href="/static/fluid960gs/ie6.css" media="screen" /><![endif]-->
-<!--[if IE 7]><link rel="stylesheet" type="text/css" href="/static/fluid960gs/ie.css" media="screen" /><![endif]-->
+<!--[if IE 6]><link rel="stylesheet" type="text/css" href="http://www.trackon.org/static/fluid960gs/ie6.css" media="screen" /><![endif]-->
+<!--[if IE 7]><link rel="stylesheet" type="text/css" href="http://www.trackon.org/static/fluid960gs/ie.css" media="screen" /><![endif]-->
 
 <link rel="stylesheet" href="http://www.trackon.org/static/style.css" type="text/css">
 <style>
