Fix many brown-paper-bag bugs in new seeder/leecher accounting code.

--- a/static/index.html
+++ b/static/index.html
@@ -61,7 +61,7 @@ wont see the number of seeders and leechers available in this tracker, this
 doesn't mean they aren't there, but atrack doesn't keep track (pun not intended
 ;)) of that information. 
 
-<p>You can also find <a href="http://track-on.appspot.com">a list of known open and public trackers at Trackon</a>.
+<p>You can also find <a href="http://www.trackon.org">a list of known open and public trackers at Trackon</a>.
 
 </div>
 
