Minor html updates.

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html><head>
 <title>Bittrk - Experimental open installation of the Atrack tracker for Google App Engine</title>
-<link rel="stylesheet" type="text/css" href="http://www.trackon.org/static/fluid960gs/all.css" media="screen">
+<link rel="stylesheet" type="text/css" href="http://mirror.cat-v.org/static/fluid960gs/all.css" media="screen">
 <!--[if IE 6]><link rel="stylesheet" type="text/css" href="http://www.trackon.org/static/fluid960gs/ie6.css" media="screen" /><![endif]-->
 <!--[if IE 7]><link rel="stylesheet" type="text/css" href="http://www.trackon.org/static/fluid960gs/ie.css" media="screen" /><![endif]-->
 
@@ -11,7 +11,7 @@ body {
     background-color: black;
 }
 #branding {
-    background-color: #6A5ACD !important;
+    background-color: #40E0D0 !important;
 }
 </style>
 <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
@@ -28,18 +28,21 @@ body {
     <ul class="nav main">
         <li><a href="http://repo.cat-v.org/atrack/">atrack</a></li>
         <li><a href="http://hg.cat-v.org/atrack/">source</a></li>
-        <li><a>links</a>
-            <ul>
-            <li><a href="http://www.trackon.org/">Trackon</a></li>
-            </ul>
-        </li>
+        <!--<li><a>links</a>
+        <ul>-->
+            <li><a href="http://www.trackon.org/">trackon</a></li>
+            <!--</ul>
+        </li>-->
         <li class=secondary><a href="http://uriel.cat-v.org/contact">contact</a></li>
     </ul>
 </div>
 
 
 <div class=grid_12>
-This is an experimental tracker.
+<div style="text-align: right; padding-top: 1px;"><script type="text/javascript">var addthis_disable_flash = true; var addthis_pub="uriell";</script> <a href="http://www.addthis.com/bookmark.php?v=20" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s7.addthis.com/static/btn/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/200/addthis_widget.js"></script></div>
+
+<h2 id=page-heading>This is an experimental Atrack installation!</h2>
+<p>Feel free to use for any torrent you like, but keep in mind that this tracker is mostly for experimental and research purposes, for an <a href="http://www.trackon.org"><b style="color: black;">extensive compilation of public and open trackers that you can use and information about their reliability go to Trackon</b></a>.
 
 <p>You can use the following addresses to add the tracker to your torrents or
 <a href="http://repo.cat-v.org/atrack/ntrack">ntrack apps</a>:
