Change header bg color.

--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@ body {
     background-color: black;
 }
 #branding {
-    background-color: #40E0D0 !important;
+    background-color: #4169E1 !important;
 }
 </style>
 <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
