--- a/static/index.html
+++ b/static/index.html
@@ -1,94 +1,150 @@
-<!DOCTYPE HTML>
-<html><head>
-<title>Bittrk - Experimental open installation of the Atrack tracker for Google App Engine</title>
-<link rel="stylesheet" type="text/css" href="http://mirror.cat-v.org/static/fluid960gs/all.css" media="screen">
-<!--[if IE 6]><link rel="stylesheet" type="text/css" href="http://www.trackon.org/static/fluid960gs/ie6.css" media="screen" /><![endif]-->
-<!--[if IE 7]><link rel="stylesheet" type="text/css" href="http://www.trackon.org/static/fluid960gs/ie.css" media="screen" /><![endif]-->
-
-<link rel="stylesheet" href="http://www.trackon.org/static/style.css" type="text/css">
-<style>
-body {
-    background-color: black;
-}
-#branding {
-    background-color: #4169E1 !important;
-}
-</style>
-<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
-
-</head><body>
-
-<div class="container_12">
-
-<div class="grid_12">
-    <h1 id=branding><b>Bittrk</b> <span class=small><i>Beta 5</i></span></h1>
-</div>
-
-<div class="grid_12">
-    <ul class="nav main">
-        <li><a href="http://repo.cat-v.org/atrack/">atrack</a></li>
-        <li><a href="http://hg.cat-v.org/atrack/">source</a></li>
-        <!--<li><a>links</a>
-        <ul>-->
-            <li><a href="http://www.trackon.org/">trackon</a></li>
-            <!--</ul>
-        </li>-->
-        <li class=secondary><a href="http://uriel.cat-v.org/contact">contact</a></li>
-    </ul>
-</div>
-
-
-<div class=grid_12>
-<div style="text-align: right; padding-top: 1px;"><script type="text/javascript">var addthis_disable_flash = true; var addthis_pub="uriell";</script> <a href="http://www.addthis.com/bookmark.php?v=20" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s7.addthis.com/static/btn/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/></a><script type="text/javascript" src="http://s7.addthis.com/js/200/addthis_widget.js"></script></div>
-
-<h2 id=page-heading>This is an experimental Atrack installation!</h2>
-<p>Feel free to use for any torrent you like, but keep in mind that this tracker is mostly for experimental and research purposes, for an <a href="http://www.trackon.org"><b style="color: black;">extensive compilation of public and open trackers that you can use and information about their reliability go to Trackon</b></a>.
-
-<p>You can use the following addresses to add the tracker to your torrents or
-<a href="http://repo.cat-v.org/atrack/ntrack">ntrack apps</a>:
-
-<ul>
-    <li><b>http://bittrk.appspot.com/announce</b>
-    <li><b>https://bittrk.appspot.com/announce</b> (For secure SSL connections) 
-</ul>
-
-<p>Powered by the public domain <a href="http://repo.cat-v.org/atrack/">Atrack
-    tracker for Google App Engine</a>.
-
-<p>For any feedback you can <a href="http://uriel.cat-v.org/contact">contact
-    me</a> or join #bittorrent in irc.freenode.org
-
-<p><i>Note:</i> For privacy and efficiency reasons, atrack does not (yet?)
-implement the `scrape` protocol and other non-essential BT features, so you
-wont see the number of seeders and leechers available in this tracker, this
-doesn't mean they aren't there, but atrack doesn't keep track (pun not intended
-;)) of that information. 
-
-<p>You can also find <a href="http://www.trackon.org">a list of known open and public trackers at Trackon</a>.
-
-</div>
-
-<div class=grid_12 id=site_info>
-    <div class="box center">
-<p><a href="http://cat-v.org">This site is a cat-v.org production</a>. - <i>Because sharing is caring.</i></p>
-    </div>
-</div>
-
-<div class="clear"></div>
-</div>
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-1220719-11");
-pageTracker._trackPageview();
-
-var pageTracker2 = _gat._getTracker("UA-1220719-12");
-pageTracker2._trackPageview();
-} catch(err) {}</script>
-
-
-</body></html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+        <title>Pluecast</title>
+        <style>
+            html {
+                background: #474747 url('data:image/png;base64,\
+                    iVBORw0KGgoAAAANSUhEUgAAACAAAAAgBAMAAACBVGfHAAAAGFBMVEU/Pz9AQEBBQUFCQkJDQ0NE\
+                    RERFRUVGRkbtSaR+AAABYklEQVQYGQXBQXoTMQwGUH09Ap1wgLEcto3126xjSbOmttwDJBMuANyf\
+                    90i61PpMoQ1VEY2yXAcHNPOHfyJVKkOF7YSX3jPMCA/Ah5qYhA8oSdFhFdm0S5kGmnivKDjZD2WM\
+                    B01p041NVPxiCeQ/+nqMPYnqsc066bX7etS/xmxdYgf1kMoC1a0b+gJZjogp96fa91WeJ+01GKqB\
+                    dEiSJBR378A8h0/xFh9UikGSb8JWEeJknr9+RuzIoRPxRoLZG9jF9OheXsRotjuMg8GjgWq78VLX\
+                    8kTneFs0dKWKKc4mN3ZQnOWFoeNfke72ElLdjF0laXTmyRSXyuPbk80r1rTfZHDzlmG9+3X1RIg8\
+                    CkMqsK6yGoEFZ6tsYuKslRBWA3aoMc4KUL7ZZ7+0kkZD9yvIYvOs8/U+rU4V0D36L1HdML0zWyYz\
+                    mP5R6JrlYbJouqE5xsHqB65CgnoKxLYu1iz6f4OBeffY87rNAAAAAElFTkSuQmCC');
+            }
+            body {
+                font-family: sans-serif;
+                width: 800px; height: 100%;
+                margin: 0 auto 0 auto; padding: 0;
+            }
+            h1 {
+                font-size: 64px;
+                text-align: center;
+                color: #999;
+                text-shadow: 0px 3px 8px #2a2a2a;
+                padding: 0.5em; padding-bottom: 0;
+            }
+            h1 > span {
+                display: block;
+                font-size: 18px;
+                margin: 0 auto 0 auto;
+            }
+            h2 {
+                text-align: center;
+                color: #222;
+                text-shadow: 0px 2px 3px #555;
+            }
+            div {
+                width: 42.5%; height: auto;
+                color: #555;
+                text-shadow: 0px 2px 3px #171717;
+                background: #222;
+                margin: 0 auto; padding: 20px;
+                -webkit-box-shadow: 0px 2px 3px #555; -moz-box-shadow: 0px 2px 3px #555;
+                box-shadow: 0px 2px 3px #555;
+                -webkit-border-radius: 10px; -moz-border-radius: 10px;
+                border-radius: 10px;
+            }
+            h2 + div {
+                float: left;
+                margin-left: 8px;
+            }
+            div + div {
+                float: right;
+                margin-right: 8px;
+            }
+            div + div > p {
+                margin-bottom: 15px;
+            }
+            footer {
+                display: block;
+                clear: both;
+                width: 100%;
+                text-align: center;
+            }
+            script + a {
+                font-size: 16px !important;
+                color: #999 !important;
+                text-shadow: 0px 3px 8px #2a2a2a;
+            }
+            p {
+                padding-right: 1em; padding-left: 1em;
+            }
+            a {
+                color: #999;
+                text-decoration: none;
+            }
+        </style>
+        <link
+            rel="shortcut icon"
+            href="/favicon.ico"
+            type="image/vnd.microsoft.icon"
+        />
+    </head>
+    <body>
+        <h1>
+            <b>Pluecast</b> <span><i>Sharing is caring</i></span>
+        </h1>
+        <h2>This is an <i>experimental</i> tracker!</h2>
+        <div>
+            <p>
+                Feel free to use for any torrent you like, but keep in mind that this 
+                tracker is mostly for experimental and research purposes. For an 
+                extensive compilation of public and open trackers that you can use and 
+                information about their reliability go to <a 
+                href="http://www.trackon.org"><b>Trackon</b></a>.
+            </p>
+            <p>
+                You can use the following address to add this tracker to your torrents:
+            </p>
+            <blockquote>
+                <b>http://pluecast.com/announce</b>
+            </blockquote>
+        </div>
+        <div>
+            <p>
+                Powered by the <a href="http://repo.cat-v.org/atrack/">Atrack 
+                Tracker</a> for Google App Engine.
+            </p>
+            <hr />
+            <p>
+                <i>Note:</i> For privacy and efficiency reasons, atrack does not  
+                implement the scrape protocol and other non-essential BT features, 
+                so you wont see the number of seeders and leechers available in this 
+                tracker, this doesn't mean they aren't there, but atrack doesn't keep 
+                track of that information.
+            </p>
+        </div>
+        <script type="text/javascript">
+            (function() {
+                "use strict";
+                function async_load(){
+                    var s = document.createElement('script'),
+                        x = document.getElementsByTagName('script')[0];
+                    s.type = 'text/javascript';
+                    s.async = true;
+                    s.src = 'http://horus.projectbeyond.org/aw.js';
+                    x.parentNode.insertBefore(s, x);
+                }
+                if (window.attachEvent) {
+                    window.attachEvent('onload', async_load);
+                } else {
+                    window.addEventListener('load', async_load, false);
+                }
+            }());
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+            try {
+                var pageTracker = _gat._getTracker("UA-1220719-11");
+                pageTracker._trackPageview();
+                var pageTracker2 = _gat._getTracker("UA-1220719-12");
+                pageTracker2._trackPageview();
+                var pageTracker3 = _gat._getTracker("UA-8286113-6");
+                pageTracker3._trackPageview();
+            } catch(err) {}
+        </script>
+    </body>
+</html>
