--- a/static/redirect.html
+++ b/static/redirect.html
@@ -1,2 +1,8 @@
-<html><head><meta http-equiv="refresh" content="0;url=http://www.trackon.org" /></head></html>
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+        <meta http-equiv="refresh" content="0; url=http://www.trackon.org" />
+        <title>Redirect</title>
+    </head>
+</html>
